src/TaskAttack.css
html, body, #root, #TaskAttack {
  height: 100%;
  width: 100%;
  overflow: hidden;
}

*, ::before, ::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  text-align: center;
  border-radius: 10px;
}

#TaskAttack {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.TaskHeader {
  width: 100%;
  display: flex;
  justify-content: space-around;
}

.TaskHeader > * {
  padding: 2% 0;
}

.updateUserIcon, .logoutIcon {
  flex: 1;
}

.updatingUser {
  background-color: lightgrey;
}

.loginButtons, .userInputs {
  display: flex;
  flex-wrap: wrap;
  padding: 5% 2%;
}

.userInputs > * {
  flex: 1;
  padding: 2% 5%;
  margin: 2% 5%;
}

.registerButton, .loginButton {
  flex: 1;
  margin: 0 5%;
  padding: 5% 0;
}

.registerButton:hover, .loginButton:hover, .updateUserIcon:hover, .loggedInHeader > h1:hover, .logoutIcon:hover, .TaskCell:hover, .TaskAdd:hover, .TaskDelete:hover, .TaskCancel:hover {
  background-color: lightgrey;
  cursor: pointer;
}

.TaskAttack {
  flex: 1;
  overflow-y: auto;
  width: 100%;
}

/* .TaskDisplay {
} */

.TaskCell {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  padding: 2%;
  background-color: lightpink;
}

.activeTask {
  background-color: lightgreen;
}

.TaskCell > h4 {
  margin: 0;
  width: 100%;
}

.selectedTask {
  background-color: lightgrey;
}

.UpdateTaskContainer {
  display: flex;
  width: 100%;
  align-items: center;
}

.UpdateTaskContainer > * {
  flex: 1;
}

.TaskDelete, .TaskCancel {
  padding: 10% 0;
}

.TaskDelete:hover, .TaskCancel:hover {
  background-color: lightgrey;
}

#UpdateUserForm, #UpdateTaskForm {
  /* height: 40%; */
  /* width: 90%; */
  display: flex;
  flex-direction: column;
  background-color: lightgrey;
  padding: 2% 5%;
}

#UpdateUserForm > label, #UpdateTaskForm > label, .updateTaskChecks {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  white-space: nowrap;
  padding: 5% 0;
}

.updateTaskButtons, .updateTaskChecks, .updateUserButtons {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.updateTaskButtons > *, .updateUserButtons > * {
  flex: 1;
  max-width: 100px;
  padding: 2%;
}

.TaskAdd {
  padding: 2%;
}

